# Real-ESRGAN-Web-UI

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
config/: params.json
esrgan/: main.py
esrgan/frontend/: favicon.py  main.py  schemas.py  services.py  util.py
esrgan/server/: infer.py  util.py
server/: infer.py  main.py  schemas.py  util.py
