[project]
name = "real-esrgan-ui"
version = "0.1.0"
description = "Simple Web based UI for Real-ESRGAN"
readme = "README.md"
requires-python = ">=3.8.20"
dependencies = [
    "basicsr>=1.4.2",
    "facexlib>=0.2.5",
    "fastapi[standard]==0.115.12",
    "opencv-python-headless==4.5.3.56",
    "gfpgan>=1.3.5",
    "loguru==0.7.3",
    "numpy==1.21.1",
    "pillow>=10.4.0",
    "torch>=1.7",
    "torchvision==0.16.0",
    "tqdm==4.62.2",
]
[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
